# immersive-soundscapes

./: .gitignore  README.md  beet.yml  pyproject.toml
assets/minecraft/: sounds.json
assets/thewii/: sounds.json
assets/thewii/lang/: en_us.json
data/minecraft/tags/functions/: load.json
immersive-sounding-datapack/: credits.txt
immersive-sounding-datapack/data/global/advancements/: immersive-sounding.json  the-wii.json
immersive-sounding-datapack/data/immersive/advancements/: metal_swords.json  metal_tools.json  netherite_sword.json  netherite_tools.json  player_joined.json  root.json  wooden_swords.json  wooden_tools.json
immersive-sounding-datapack/data/immersive/functions/: check_location.mcfunction  detect_1.15.mcfunction  detect_1.16.mcfunction  fix.mcfunction  install.mcfunction  install_2.mcfunction  load.mcfunction  load_2.mcfunction  (+7 more)
immersive-sounding-resources/: pack.mcmeta
immersive-sounding-resources/assets/immersive/: sounds.json
immersive-sounding-resources/assets/minecraft/: sounds.json
immersive-sounding-resources/assets/thewii/: sounds.json
immersive-soundscapes-datapack/: credits.txt  pack.mcmeta
immersive-soundscapes-musicpack/: pack.mcmeta
immersive-soundscapes-musicpack/assets/minecraft/: sounds.json
immersive-soundscapes-musicpack/assets/thewii/: sounds.json
immersive-soundscapes-resources/: pack.mcmeta
immersive-soundscapes-resources/assets/minecraft/: sounds.json
immersive-soundscapes-resources/assets/thewii/: sounds.json
src/: main.bolt  objectives.bolt  pack.bolt
yekonaip-musicpack-resources/: pack.mcmeta
(+265 files in other folders)
