[tool.poetry]
name = "immersive-soundscapes"
version = "3.0.0"
description = ""
authors = ["TheWii <67249660+TheWii@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
bolt = ">=0.17.3"
bolt-expressions = ">=0.8.0"
beet-plugins = {git = "https://github.com/TheWii/beet-plugins.git", rev = "main"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
